--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <title>購物清單頁面</title>
-<script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
 </head>
 <body>
 <div id="app" v-cloak>
@@ -47,5 +46,7 @@
   <div v-else>無購買商品!</div>
 
 </div>
+<script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
+<script src "index.js"></script>
 </body>
 </html>
