--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div v-else>無購買商品!</div>
 
 </div>
-<script src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
-<script src "index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="index.js"></script>
 </body>
 </html>
